--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -1,7 +1,7 @@
 BOOST_DIR = boost
 
 CXX = nvcc #g++ #clang++
-CPPFLAGS =  -arch=sm_50 -rdc=true  -O3 -I. -I$(BOOST_DIR)/include
+CPPFLAGS = -std=c++11 -arch=sm_50 -rdc=true  -O3 -I. -I$(BOOST_DIR)/include
 #-DKENLM_MAX_ORDER=7 -DUSE_KENLM 
 
 LIBS = -L$(DALM_DIR)/lib -L$(KENLM_DIR)/lib  \
