--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -1,19 +1,30 @@
 BOOST_DIR = boost
 
-CXX = nvcc #g++ #clang++
-CPPFLAGS = -std=c++11 -arch=sm_50 -rdc=true  -O3 -I. -I$(BOOST_DIR)/include
+CXX = g++ #clang++
+CXXFLAGS = -std=c++11 -O3 -I. -I$(BOOST_DIR)/include
 #-DKENLM_MAX_ORDER=7 -DUSE_KENLM 
+
+NVCC = nvcc
+NVCCFLAGS = -std=c++11 -arch=sm_50 -rdc=true  -O3 -I. -I$(BOOST_DIR)/include
 
 LIBS = -L$(DALM_DIR)/lib -L$(KENLM_DIR)/lib  \
 	-lz -llzma -lbz2 -lrt -lpthread \
 	#-lkenlm  -liconv #-lrt # 
 
+.SUFFIXES: .c .cpp .cu .o
+
+%.o: %.cu
+	$(NVCC) $(NVCCFLAGS) -c $< -o $@
+
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
 OBJECTS = InputFileStream.o MyVocab.o TypeDef.o \
 		Util.o \
-		Bitmap.cu Hypothesis.cu  InputPath.cu InputPaths.cu \
-		Main.cu Managed.cu Manager.cu Phrase.cu PhraseTableMemory.cu Range.cu \
-		Scores.cu Stack.cu Stacks.cu \
-		TargetPhrase.cu TargetPhrases.cu Test.cu 
+		Bitmap.o Hypothesis.o  InputPath.o InputPaths.o \
+		Main.o Managed.o Manager.o Phrase.o PhraseTableMemory.o Range.o \
+		Scores.o Stack.o Stacks.o \
+		TargetPhrase.o TargetPhrases.o Test.o 
 
 
 OBJECTS_fast_moses = $(OBJECTS)
@@ -21,9 +32,7 @@ OBJECTS_fast_moses = $(OBJECTS)
 all: fast-moses
 
 fast-moses: $(OBJECTS_fast_moses)
-	$(CXX) $(CPPFLAGS) -o fast-moses $(OBJECTS_fast_moses) $(LIBS)
-#rm -f *.o */*.o */*/*.o */*/*/*.o
-
+	$(NVCC) $(NVCCFLAGS) -o fast-moses $(OBJECTS_fast_moses) $(LIBS)
 
 clean:
 	rm -f fast-moses *.o */*.o */*/*.o */*/*/*.o
