cleanup cuda string functions

--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -27,10 +27,11 @@ LIBS = -L$(DALM_DIR)/lib -L$(KENLM_DIR)/lib  \
 
 OBJECTS = InputFileStream.o MyVocab.o TypeDef.o \
 		Util.o \
-		Bitmap.o Hypothesis.o  InputPath.o InputPaths.o itoa.o \
+		Bitmap.o Hypothesis.o  InputPath.o InputPaths.o \
 		Main.o Managed.o Manager.o Phrase.o PhraseTableMemory.o Range.o \
 		Scores.o Stack.o Stacks.o \
-		TargetPhrase.o TargetPhrases.o Test.o 
+		TargetPhrase.o TargetPhrases.o Test.o \
+		CUDA/Util.o
 
 
 OBJECTS_fast_moses = $(OBJECTS)
