--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -27,7 +27,7 @@ LIBS = -L$(DALM_DIR)/lib -L$(KENLM_DIR)/lib  \
 
 OBJECTS = InputFileStream.o MyVocab.o TypeDef.o \
 		Util.o \
-		Bitmap.o Hypothesis.o  InputPath.o InputPaths.o \
+		Bitmap.o Hypothesis.o  InputPath.o \
 		Main.o Manager.o Phrase.o PhraseTableMemory.o Range.o \
 		Scores.o Stack.o Stacks.o \
 		TargetPhrase.o TargetPhrases.o Test.o \
