--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -29,7 +29,7 @@ OBJECTS = InputFileStream.o MyVocab.o TypeDef.o \
 		Util.o \
 		Bitmap.o Hypothesis.o  InputPath.o \
 		Main.o Manager.o Phrase.o PhraseTableMemory.o Range.o \
-		Scores.o Stack.o Stacks.o \
+		Scores.o ScoresUnmanaged.o Stack.o Stacks.o \
 		TargetPhrase.o TargetPhrases.o Test.o \
 		CUDA/Managed.o CUDA/Util.o
 
