--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -33,7 +33,7 @@ OBJECTS = InputFileStream.o MyVocab.o TypeDef.o \
 		Util.o \
 		Bitmap.o Hypothesis.o  InputPath.o \
 		Main.o Manager.o Parameter.o Phrase.o Range.o \
-		Scores.o ScoresUnmanaged.o Stack.o Stacks.o \
+		Scores.o ScoresUnmanaged.o Stack.o Stacks.o System.o \
 		TargetPhrase.o TargetPhrases.o Test.o \
 		CUDA/Managed.o CUDA/Util.o \
 		FF/Distortion.o FF/FeatureFunctions.o FF/StatefulFeatureFunction.o \
