--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -36,7 +36,7 @@ OBJECTS = InputFileStream.o MyVocab.o TypeDef.o \
 		Scores.o ScoresUnmanaged.o Stack.o Stacks.o System.o \
 		TargetPhrase.o TargetPhrases.o Test.o \
 		CUDA/Managed.o CUDA/Util.o \
-		FF/Distortion.o FF/FeatureFunctions.o FF/StatefulFeatureFunction.o FF/WordPenalty.o \
+		FF/Distortion.o FF/FeatureFunction.o FF/FeatureFunctions.o FF/StatefulFeatureFunction.o FF/WordPenalty.o \
 		FF/UnknownWordPenalty.o \
 		TranslationModel/PhraseTableMemory.o \
 		util/bit_packing.cc                                 util/read_compressed.cc \
