--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -38,6 +38,7 @@ OBJECTS = InputFileStream.o MyVocab.o TypeDef.o \
 		CUDA/Managed.o CUDA/Util.o \
 		FF/Distortion.o FF/FeatureFunction.o FF/FeatureFunctions.o FF/StatefulFeatureFunction.o FF/WordPenalty.o \
 		FF/UnknownWordPenalty.o \
+		LM/LanguageModel.o \
 		TranslationModel/PhraseTableMemory.o \
 		util/bit_packing.cc                                 util/read_compressed.cc \
 		util/mmap.cc                                \
