--- a/fast-moses/Makefile
+++ b/fast-moses/Makefile
@@ -4,15 +4,17 @@ CC = gcc
 CCFLAGS = -O3 -I. -I$(BOOST_DIR)/include
 
 CXX = g++ #clang++
-CXXFLAGS = -std=c++11 -O3 -I. -I$(BOOST_DIR)/include
+#CXXFLAGS = -std=c++11 -O3 -I. -I$(BOOST_DIR)/include
+CXXFLAGS = -std=c++11 -I. -I$(BOOST_DIR)/include -lprofiler -Og
 #-DKENLM_MAX_ORDER=7 -DUSE_KENLM 
 
 NVCC = nvcc
-NVCCFLAGS = -std=c++11 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_60,code=sm_60  -rdc=true  -O3 -I. -I$(BOOST_DIR)/include
+#NVCCFLAGS = -std=c++11 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_60,code=sm_60  -rdc=true  -O3 -I. -I$(BOOST_DIR)/include
+NVCCFLAGS = -std=c++11 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_60,code=sm_60  -rdc=true   -I. -I$(BOOST_DIR)/include  -lprofiler -O0
 
 LIBS = -L$(DALM_DIR)/lib -L$(KENLM_DIR)/lib  \
 	-lz -llzma -lbz2 -lrt -lpthread \
-	-lboost_program_options -lboost_system
+	-lboost_program_options -lboost_system -lprofiler -ltcmalloc_and_profiler
         #-lkenlm  -liconv #-lrt # 
 
 .SUFFIXES: .c .cpp .cu .o
